src/app.css
/* ... */
.BoardTitle__actionBar__right {
  right: 4px;
}

.BoardTitle__actionBar__left .fa,
.BoardTitle__actionBar__right .fa {
  cursor: pointer;
  width:24px;
  height: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
}
.BoardTitle__actionBar__left .fa:hover,
.BoardTitle__actionBar__right .fa:hover {
  color: var(--colorBlueBlack);
  transform: scale(1.2);
}

.BoardTitle__actionBar__right .dropdown__trigger .fa.fa-group {
  color: var(--colorLink);
}

.BoardTitle__actionBar input[type='text'] {
  text-align: center;
}

.BoardTitle {
  width: 480px;
  position: relative;
}

.BoardTitle__omniboxInput {
  width: 100% !important;
  max-width: none !important;
}

.Omnibox {
  border-radius: 4px;
  overflow: hiden;
  background-color: #ffffff;
  box-shadow: 0 12px 32px 0 rgba(0, 0, 0, 0.2);
  width: 478px;
  z-index: 10;
  position: fixed;
  top: 52px;
  left: 50%;
  margin-left: -239px;
}

.Omnibox .ListMenu__item .Actions {
  visibility: hidden;
}

.Omnibox .ListMenu__item--selected .Actions {
  visibility: visible;
}

.ContextMenu {
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.12);
  width: 200px;
  z-index: 10;
}

.ContextMenu__divider {
  height: 1px;
  border-top: 1px solid var(--colorInputGrey);
}

.ContextMenu__section {
  padding: 4px 0;
}

.ContextMenu__iconBounding {
  display: inline-block;
  width: 28px;
  height: 28px;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  vertical-align: middle;
  margin-right: 8px;
}

.ContextMenu .react-contextmenu-item {
  padding: 4px 8px;
  cursor: pointer;
}

.ContextMenu .react-contextmenu-item:last-child {
  margin-bottom: 0px;
}

.ContextMenu__iconBounding--note {
  background-image: linear-gradient(135deg, #d2e5f7, #f1dce4);
  color: var(--colorBlueBlack);
}

.ContextMenu__iconBounding--file {
  background-image: linear-gradient(135deg, #85e2f8, #c7d7e3);
  color: #006476;
}

.ContextMenu__iconBounding .fa {
  font-size: 22px;
}

.ContextMenu__label {
  vertical-align: middle;
}

.ContextMenu h6 {
  padding-left: 8px;
  font-size: 12px;
  line-height: 16px;
  margin-bottom: 8px;
  color: var(--colorBlueBlack);
}

.ColorPicker {
  background: #fff;
  border: 0 solid rgba(0,0,0,0.25);
  border-radius: 2px;
  display: grid;
  grid-template-columns: repeat(6, 24px);
  grid-gap: 8px;
}

.ColorPicker__swatch {
  width: 24px;
  height: 24px;
  border-radius: 2px;
  overflow: hidden;
}

.TitleBar {
  display: flex;
  box-sizing: border-box;
  position: fixed;
  top: 0px;
  height: 40px;
  padding: 0px 8px;
  width: 100%;
  align-items: center;
  align-content: space-between;
  background-color: #ffffff;
  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.12);
  z-index: 3;
  color: var(--colorSecondaryGrey);
}

.TitleBar__menuItem .fa {
  font-size: 24px;
  text-align: center;
}

button[disabled].TitleBar__menuItem .fa {
  color: #CCC;
}

.TitleBar__center {
  display: flex;
  align-items: center;
  margin: 0 auto;
}

.TitleBar .TitleBar__right, .TitleBar .TitleBar__left {
  align-items: center;
  display: flex;
  height: 40px;
}

.TitleBar .TitleBar__left {
  position: absolute;
  left:8px;
  top:0;

}
.TitleBar .TitleBar__right {
  position: absolute;
  top:0;
  right: 8px;
}

.TitleBar .TitleBar__menuItem {
  color: var(--colorSecondaryGrey);
  box-sizing: border-box;
  display: flex;
  align-items: center;
  justify-content: center;
  width:40px;
  height:40px;
  padding:0;
  background: none;
  margin: none;
  border: none;
  outline: none;
}

.TitleBar .TitleBar__menuItem:active,
.TitleBar .TitleBar__menuItem:focus {
  outline: none;
}

.TitleBar .TitleBar__menuItem:hover {
  color: var(--colorBlueBlack);
}

.TitleBar .TitleBar__right .dropdown__trigger {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
}

.TitleBar .TitleBar__right .dropdown.dropdown--active {
  background-color: var(--colorInputGrey);
}


.TitleBar .TitleBar__right .dropdown__content {
  top: 48px;
  right: 0px;
}

.TitleBar .TitleBar__left .dropdown__content {
  left: 0px;
  top: 48px;
}

.TitleBar__logo {
  margin-right: 8px;
}

.TitleBar__titleText {
  padding: 0px 8px;
  white-space: nowrap;
  overflow:hidden;
  text-overflow: ellipsis;
}

.TitleBar__titleText {
  width: 336px;
  font-size: 14px;
  color: var(--colorBlueBlack);
  font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
  background: var(--colorInputGrey);
  border:0px;
  outline: none;
  border-radius: 4px;
  height: 24px;
  line-height:24px;
}

.TitleBar__titleText::selection {
  background: rgba(0,0,0,.05);
}

.ViewedDocs {
  background: white;
}

.Invitation {
  display: flex;
  align-items: center;
}

.Invitation__body {
  margin-left: 10px;
}

.DocLink {
  display: flex;
  align-items: center;
  cursor: pointer;
  width: 100%;
}

.DocLink__title {
  margin-left: 10px;
  -webkit-user-drag: none;
  user-select: none;
}

.Badge {
  padding: 8px;
  font-size: 24px;
  border-radius: 50%;
  background-color: #D5DFE5;
}

div.board {
  position:relative;
  background-image: url(grid.svg);
  background-blend-mode: color-burn;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.card {
  border-top: 0;
  max-height: 100%;
  max-width: 100%;
  min-width: 20px;
  z-index: var(--zIndexCard);
}

div.card.text {
  /* use an inset box-shadow to avoid the mitering of corners with normal borders */
  min-width: 48px;
  max-width: 481px;
}

div.card.text.selected {
  /* attach the outline to the content, covering the 1px border */
  outline-offset: -1px;
  outline: 2px solid black;
}

div.card.selected {
  outline: solid 2px var(--colorBlueBlack);
  z-index: 1;
}
/* ... */

